2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Timestamp and version output of scripts.

	* tools/bin/slc.in: Do not inform about `slrev' since it does not
	exist any more.

	* tools/bin/slr.in,
	* tools/bin/slt.in: Produce timestamp and script version number in
	output log.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Packaging fix.

	* Makefile.am (VERSION_GEN): Check for `.git' in parent directory,
	as done by `configure.ac'.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* tools/lib/Makefile.am: Depend on `Makefile.am' not `Makefile'.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use the new version numbering mechanism for scripts.

	* tools/bin/cce.in,
	* tools/bin/slc.in,
	* tools/bin/slr.in,
	* tools/bin/slt-many.in,
	* tools/bin/slt.in: Use `$slc_version' only, remove references to
	`$slrev' and `$rev' since this is now embedded in `$slc_version'.

	* tools/bin/Makefile.am: Make scripts and man pages depend on
	`$(top_srcdir)/.version' so they are regenerated on version bumps.
	
2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce automatic version numbering.

	* build-aux/version-gen: New. Inspired from `git-version-gen', but
	privileging SVN revision numbers over git commit hashes.
	
	* build-aux/package-version: Set to 2.1.

	* configure.ac,
	* Makefile.am: Update to use `build-aux/version-gen'.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes (allow `make distcheck').
	
	* lib/mtalpha.mk (CLEANFILES): Clean all built objects.
	
	* tools/lib/Makefile.am (CLEANFILES): Clean generated scripts.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Avoid multi-line
	`//'-style comments. (reported by C. Joslin)

	* lib/include/cstddef.h: Do not define `NULL' if it is already
	defined (requested by C. Joslin).

	* lib/src/gfx.c: Use proper `printf' format modifiers.
